fix spacing issues caused by new divs in ng loop

--- a/src/app/daily-menu/daily-menu.component.css
+++ b/src/app/daily-menu/daily-menu.component.css
@@ -21,6 +21,10 @@ ul {
   margin-right: 15px;
   margin-top: 8px;
   margin-bottom: 8px; */
+  margin-right: 15px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  padding-left: 0;
 }
 
 .daily-link {
@@ -28,9 +32,6 @@ ul {
   grid-template-columns: 55px 18vw;
   grid-column-gap: 10px;
   padding-left: 0;
-  margin-right: 15px;
-  margin-top: 8px;
-  margin-bottom: 8px;
 }
 
 .daily-link:hover {
